k8s/overlays/dev/deployment-imagepullsecret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemmap-api
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app # ← 기존 컨테이너 이름과 일치해야 함
          imagePullPolicy: Always
