k8s/overlays/dev/deployment-replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemmap-api
spec:
  replicas: 1
