k8s/overlays/dev/deployment-secret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemmap-api
spec:
  template:
    spec:
      containers:
        - name: app
          # 전체 시크릿을 env로 주입
